Simplification de la config de crossbar dans la demo sur la video remote

--- a/2014/juin/video_remote/.crossbar/config.json
+++ b/2014/juin/video_remote/.crossbar/config.json
@@ -1,7 +1,4 @@
-
 {
-   "controller": {
-   },
    "workers": [
       {
          "type": "router",
@@ -38,8 +35,7 @@
                      "directory": ".."
                   },
                   "ws": {
-                     "type": "websocket",
-                     "url": "ws://0.0.0.0:8080/ws"
+                     "type": "websocket"
                   }
                }
             }
