Serving the static file with crossbar for the last demo

--- a/2015/fevrier/tudo_django_wamp/.crossbar/config.json
+++ b/2015/fevrier/tudo_django_wamp/.crossbar/config.json
@@ -42,6 +42,10 @@
                      "type": "pusher",
                      "realm": "realm1",
                      "role": "anonymous"
+                  },
+                  "static": {
+                     "type": "static",
+                     "directory": "../static"
                   }
                }
             }
